--- a/Pipeline/pipeline.yaml
+++ b/Pipeline/pipeline.yaml
@@ -21,11 +21,12 @@ variables:
   - name: terraform_version
     value: '1.2.6'
   - name: repository
-    value: 'devopsjourney'
+    value: 'aspnet'
   - name: dockerfile
     value: '$(Build.SourcesDirectory)/aspnet-core-dotnet-core/Dockerfile'
   - name: containerRegistry
     value: 'devopsjourneyacr.azurecr.io'
+  - group: devopsjourney
 
 stages :
   - stage: validate
@@ -136,3 +137,31 @@ stages :
           dockerfile: ${{ variables.dockerfile }}
           containerRegistry: ${{ variables.containerRegistry }}
           tags: $(Build.BuildId)
+
+  - stage: aks_deploy
+    displayName: Deploy aspnet app to AKS
+    jobs:  
+    - job: Build
+      displayName: Build job
+      steps:
+      - task: AzureCLI@2
+        displayName: 'Configure AKS Cluster'
+        inputs:
+          azureSubscription: ${{ variables.backendServiceArm }}
+          scriptType: bash
+          scriptLocation: inlineScript
+          addSpnToEnvironment: true
+          inlineScript: |
+            #!/usr/bin/env bash
+            set -x
+            AKS_RG="devopsjourneyaks-rg"
+            AKS_NAME="devopsjourneyaks"
+
+            # Get AKS Credentials
+            az aks get-credentials -g $AKS_RG -n $AKS_NAME --admin
+
+            # Create secret
+            kubectl -n default create secret generic aikey --from-literal=aisecret=$(AIKEY)
+
+            # Apply app
+            kubectl apply -f pipelines/scripts/aspnet.yaml 
