Add trigger to pipeline

--- a/Pipeline/pipeline.yaml
+++ b/Pipeline/pipeline.yaml
@@ -1,6 +1,10 @@
 name: $(BuildDefinitionName)_$(date:yyyyMMdd)$(rev:.r)
 
-trigger: none
+trigger:
+  batch: true 
+  branches:
+    include:
+      - master
 
 # Don't run against PRs
 pr: none
@@ -136,7 +140,7 @@ stages :
           repository: ${{ variables.repository }}
           dockerfile: ${{ variables.dockerfile }}
           containerRegistry: ${{ variables.containerRegistry }}
-          tags: $(Build.BuildId)
+          tags: 'latest '
 
   - stage: aks_deploy
     displayName: Deploy aspnet app to AKS
